2007-10-29  Sven Neumann  <sven@gimp.org>

	* libgimpcolor/gimpadaptivesupersample.c
	(gimp_adaptive_supersample_area): return with a warning if called
	with NULL render_func or put_pixel_func.

2007-10-29  Sven Neumann  <sven@gimp.org>

	Fix bug #491272 (no cursor drawn for small brush sizes):

	* app/tools/gimpbrushtool.[ch]
	(gimp_brush_tool_draw_brush): don't draw the brush outline if it
	becomes too small. Instead draw a small cross, but only if
	"draw_fallback" was passed as TRUE.
	(gimp_brush_tool_draw_brush): pass TRUE for "draw_fallback" if
	cursor drawing is disabled for the paint tools.

	* app/tools/gimpsourcetool.c (gimp_source_tool_draw): pass FALSE
	for "draw_fallback".

	* app/tools/gimpdrawtool.c (gimp_draw_tool_draw_cross_by_anchor):
	draw a symmetric cross for odd handle sizes.

2007-10-29  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_coord_on_handle):
	initialize variables to suppress a compiler warning.

2007-10-28  Sven Neumann  <sven@gimp.org>

	* app/pdb/gimppdb.c (gimp_pdb_execute_procedure_by_name): also
	call va_end() in the error cases.

2007-10-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorscales.c (gimp_color_scales_set_channel):
	fixed range check.

2007-10-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c
	(gimp_scrolled_preview_nav_button_press): use small-checks for the
	navigation popup and inherit the check-type from the preview.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpwidgets-utils.c (gimp_text_buffer_load): close
	the file handle.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpmemsize.c (string_to_memsize): don't just crash
	right away if the impossible happens.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c (prefs_resolution_source_callback):
	g_object_get_data() should always return a size-entry here. Return
	with a warning if it doesn't.
